Add missing year, remove done TODO's, rename variables, shuffle list on the most endpoint due to the player with the most attribute always being last